--- a/AdventOfCode24/AdventOfCode.csproj
+++ b/AdventOfCode24/AdventOfCode.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Inputs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
